feat: show your mood history on your profile
